# smu-pdf

./: .env  .env.example  .replit  Dockerfile  README.md  app.py  config.py  deploy.sh  docker-compose.yml  init-letsencrypt.sh  main.py  nginx.conf  openrouter_client.py  pdf_processor.py  pyproject.toml  replit.nix  requirements.txt  security.py  utils.py  visualization_handler.py  visualizer.py
assets/: style.css
certbot/conf/live/smu.bchwy.com/: cert.pem  chain.pem  fullchain.pem  privkey.pem
certbot/conf/renewal/: smu.bchwy.com.conf
